tests/baselines/reference/divergentAccessorsTypes4(target=es2015).errors.txt
divergentAccessorsTypes4.ts(5,3): error TS2564: Property 'prop2' has no initializer and is not definitely assigned in the constructor.
divergentAccessorsTypes4.ts(29,1): error TS2322: Type '"hello"' is not assignable to type '42'.


==== divergentAccessorsTypes4.ts (2 errors) ====
    class One {
      get prop1(): string { return ""; }
      set prop1(s: string | number) { }
    
      prop2: number;
      ~~~~~
!!! error TS2564: Property 'prop2' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Two {
      get prop1(): "hello" { return "hello"; }
      set prop1(s: "hello" | number) { }
    
      get prop2(): string { return ""; }
      set prop2(s: string | 42) { }
    
    }
    
    declare const i: One & Two;
    
    // "hello"
    i.prop1;
    // number | "hello"
    i.prop1 = 42;
    i.prop1 = "hello";
    
    // never
    i.prop2;
    // 42
    i.prop2 = 42;
    i.prop2 = "hello"; // error
    ~~~~~~~
!!! error TS2322: Type '"hello"' is not assignable to type '42'.
    